# Etherion

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.worker  MANIFEST.in  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-worker.txt  requirements.txt
.github/workflows/: main.yml
Docs/etherion_docs/: guide.md
Logs/: #19767435762 - Lint and Test  TEMPLATE.md
Logs/Daily/: README.md
Logs/Project/: log-connector-bq-oauth-2025-11-12.md  todo-connector-bq-oauth-2025-11-12.md
Z/: agents.md  rules.md  tech.md
alembic/archived/: 20250114_add_agent_versioning.py  20250114_add_tenant_is_active_field.py  merge_20250114_heads.py
alembic/versions/: 1c5567b733a0_merge_heads_20251106_bb87e36e1655.py  20250114_add_tenant_is_active.py  20250115_add_user_observation_table.py  20250904_102830_refactor_job_data_persistence.py  20251018_adjust_rls_for_system_overlay.py  20251024_add_credit_ledger_and_stripe_event.py  20251024_add_tenant_credit_balance.py  20251210_add_thread_provider_model.py  20260105_fix_message_schema.py  20260316_remove_billing_tables.py  20260322_add_kb_pgvector_tables.py  345fe61a61c6_populate_tenant_data_and_make_fields_.py  8747b1bc101a_initial_migration.py  c172fb851fc2_add_soft_delete_fields_to_.py  c32c9ff9ca19_.py  (+5 more)
etherion/cli/: _env.py  (+11 more)
frontend/: .dockerignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend_templates/: oauth-callback-handler.tsx  tenant-naming-wizard.tsx
infra/: README.md
memory/: platform_architecture_plan.md  tui_test_plan.md
scripts/: append_pillar_sections.sh  cleanup_old_agent_system.py  enable_rls.sql  extract_agent_definitions.py  fix_alembic_rls.sql  fix_db_known_issues.sql  manage_fine_tuning_data.py  manage_sft_data.py  migrate_agents_to_database.py  migrate_bq_to_pgvector.py  migrate_gcs_to_local.py  pillar_auditor.py  purge_credentials.sh  replace_project_id.sh  run_load_tests.py  run_migration_tests.sh  run_real_mcp_test.py  scan_credentials.py  secrets_txt_to_hcl.py  seed_gsm_from_log.sh  seed_system_agents.py  setup_secrets.py  sync-from-langchain.sh  system_agent_definitions.json  verify_env.sh
src/: celery_worker.py  test_dns_validation.py  test_tenant_creation_flow.py
tests/: conftest.py  run_tenant_tests.sh  simple_secrets_test.py  test_agents_pagination_soft_delete.py  test_async_execution.py  test_auth.py  test_bigquery_label_guard.py  test_cost_tracker.py  test_csrf_and_tokens.py  test_day14_features.py  test_deployment.py  test_enhanced_secrets_manager.py  test_fine_tuning_system.py  test_knowledge_base.py  test_llm_pricing.py  test_monitoring_observability.py  test_network_security.py  test_orchestrator_enhancements.py  test_orchestrator_refactor.py  test_phase13_ingestion.py  test_pricing_math.py  test_pricing_services.py  test_scheduler.py  test_scheduler_simple.py  test_secrets_direct.py  test_security_features.py  test_sft_data_cleaning.py  test_shopify_tool.py  test_support_agent.py  test_tenant.py  test_tenant_creation.py  test_tenant_utils.py  test_tool_schema_dynamic_strict.py  test_tool_schema_exposure.py
tui/: Makefile  go.mod  main.go
tui-pkg/: README.md  pyproject.toml  setup.py
tui-pkg/etherion_tui/: __init__.py
(+1039 files in other folders)
