[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etherion"
version = "0.1.4"
description = "Self-hosted AI orchestration platform — agentic runtime you own end-to-end"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "orchestration", "self-hosted", "langchain", "celery", "pgvector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
    "celery>=5.3",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "cryptography>=42.0",
    "redis>=5.0",
    "alembic>=1.13",
    "sqlmodel>=0.0.19",
    "fastapi>=0.111",
    "minio>=7.2",
    "sqlalchemy[asyncio]>=2.0",
    "email-validator>=2.0",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",
    "httpx>=0.27",
    "google-cloud-secret-manager>=2.0",
    "strawberry-graphql[fastapi]>=0.235",
    "pgvector>=0.3",
    "langchain>=0.2",
    "langchain-core>=0.2",
]

[project.urls]
Homepage = "https://github.com/Saturn99X/Etherion"
Repository = "https://github.com/Saturn99X/Etherion"
"Bug Tracker" = "https://github.com/Saturn99X/Etherion/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
full = [
    "langchain-anthropic>=0.1",
    "langchain-google-genai>=1.0",
    "langchain-openai>=0.1",
    "hvac>=2.0",
]

[project.scripts]
etherion = "etherion.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["etherion", "src"]
artifacts = ["etherion/_data/**"]

[tool.hatch.build.targets.sdist]
include = [
    "etherion/",
    "src/",
    "alembic/",
    "alembic.ini",
    "README.md",
    "pyproject.toml",
]
