[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etherion-tui"
version = "0.1.9"
description = "Terminal UI for the Etherion AI platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "tui", "terminal", "etherion", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "etherion>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/Saturn99X/Etherion"
Repository = "https://github.com/Saturn99X/Etherion"
"Bug Tracker" = "https://github.com/Saturn99X/Etherion/issues"

[project.scripts]
etherion-tui = "etherion_tui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["etherion_tui*"]

[tool.setuptools.package-data]
etherion_tui = ["bin/*"]
